# puff

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  PKGBUILD  README.md  build.rs  poppup.py
.cargo/: config  config.toml
.gitlab/: build.yml  deploy.yml  package.yml  release.yml  test.yml
.gitlab/deploy/: arch-x64.yml  cargo.yml  debian-x64.yml
.gitlab/package/: arch-x64.yml  debian-x64.yml
.gitlab/release/: release.yml
.gitlab/test/: unit-linux.yml
docs/: 404.html  first-steps.html  index.html  index.xml  installation.html  recipes.html  registries.html  remotes.html  sitemap.xml
docs/.quartz-cache/: transpiled-build.mjs  transpiled-build.mjs.map
docs/obsidian/.obsidian/: workspace.json
docs/obsidian/parcel-doc/: Manifest.md  Recipes.md  roadmap.canvas
docs/obsidian/quartz/: Puff - package manager.md  first-steps.md  index.md  installation.md  recipes.md  registries.md  remotes.md  Начало работы.md  Рецепты.md  Удаленные репозитории.md  Установка.md
docs/static/: contentIndex.json
docs/tags/: c.html  cargo.html  cmake.html  cxx.html  index.html  puff.html  rust.html
scripts/: aql-query.py  packname.py
src/: args.rs  consts.rs  main.rs  names.rs  parcel.rs  poppy.rs  puff.rs
src/artifactory/: artifactory.rs  entry.rs  mod.rs  query.rs  registry.rs
src/builder/: builder.rs  mod.rs  recipe.rs
src/cache/: cache.rs  mod.rs
src/core/: args.rs  config.rs  directories.rs  environment.rs  mod.rs
src/manifest/: dependency.rs  manifest.rs  mod.rs
src/pack/: mod.rs  pack.rs  unpack.rs
src/registry/: entry.rs  git.rs  mod.rs  registry.rs
src/resolver/: cache.rs  dependency.rs  dependency_tree.rs  entry.rs  mod.rs  package_getter.rs  pull.rs  push.rs  resolver.rs
src/toolchains/: base.rs  cmake.rs  mod.rs  shell.rs  utl.rs
src/types/: arch.rs  distribution.rs  mod.rs  os.rs  version.rs
src/utility/: ascii.rs
src/utils/: ascii.rs  cli.rs  config.rs  emplace.rs  environment.rs  global.rs  locate_install.rs  mod.rs
src/utils/helper_types/: arch.rs  de.rs  distribution.rs  mod.rs  (+1 more)
wix/: License.rtf  main.wxs
(+2 files in other folders)
