[package]
name = "poppy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
log = "0.4.20"
directories = "5.0.1"
flexi_logger = "0.27.3"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.11.22", features = ["stream", "blocking"] }
futures = "0.3.29"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "fs", "macros"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
url = "2.5.0"
pkg-config = "0.3.27"
lazy_static = "1.4.0"
git2 = "0.18.1"
git2_credentials = "0.13.0"
indicatif = "0.17.7"
whoami = "1.4.1"
walkdir = "2.4.0"
toml = "0.8.8"
decompress = "0.6.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.32"
md5 = "0.7.0"
strfmt = "0.2.4"

[build-dependencies]
build-data = "0.1.5"