[package]
name = "parcel"
version = "2.0.0"
description = "parcel - a tool for managing c/c++ packages"
edition = "2021"

[dependencies]
# essentials #
anyhow = "1.0.79"
directories = "5.0.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
strfmt = "0.2.4"
tempfile = "3.10.1"
regex = "1.10.3"
void = "1.0.2"

# cli #
log = "0.4.20"
flexi_logger = "0.27.3"
clap = { version = "4.0.32", features = ["derive", "color"] }
colored = "2.1.0"
indicatif = "0.17.7"
# dialoguer

# network #
reqwest = { version = "0.11.22", features = ["stream", "blocking"] }
futures = "0.3.29"
futures-util = "0.3.29"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "fs", "macros"] }
tokio-stream = { version = "0.1.14", features = ["io-util"] }
url = "2.5.0"

# system/platform #
pkg-config = "0.3.27"
whoami = "1.4.1"
walkdir = "2.4.0"
fs_extra = "1.3.0"

# serialization #
toml = "0.8.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9.32"
serde_json = "1.0.114"

# compression #
decompress = "0.6.0"
tar = "0.4.40"
flate2 = "1.0.28"

[build-dependencies]
build-data = "0.1.5"

[package.metadata.appimage]
auto_link = true